added link to anchor tag

--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -20,7 +20,7 @@
             <li><a href="HomeScreen.html">
                 <i class="fas fa-home"></i> Home
             </a></li>
-            <li><a href="">
+            <li><a href="#">
                 <i class="fas fa-search"></i> Search
             </a></li>
             <li><a href="">Library</a></li>
